<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/idTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_id_TV"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nameTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_name_ET"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/weightTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_weight_ET"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/priceTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_price_ET"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="@dimen/_24sp" />
</LinearLayout>