<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/_8dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/text_id_TV" />

            <EditText
                android:id="@+id/iDET"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:width="@dimen/_150px" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/text_name_ET" />

            <EditText
                android:id="@+id/nameET"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:width="@dimen/_150px" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/text_weight_ET" />

            <EditText
                android:id="@+id/weightET"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:width="@dimen/_150px" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/text_price_ET" />

            <EditText
                android:id="@+id/priceET"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:width="@dimen/_150px" />
        </TableRow>


    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
